<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time"
        style="@style/TextAppearance.App.body2"
        android:text="@string/Now"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_status_weather"
        android:contentDescription="@string/des_iv"
        android:src="@drawable/sun"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_temperature"
        android:text="@string/unit"
        android:layout_gravity="center"
        style="@style/TextAppearance.App.body2"
        android:layout_marginTop="4dp"/>
</LinearLayout>