<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/tv_day"
        style="@style/TextAppearance.App.body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Today"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_day"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_status_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/des_iv"
            android:src="@drawable/rain" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/unit" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status_weather"
        style="@style/TextAppearance.App.body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sunrise"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_temperature_hl"
        style="@style/TextAppearance.App.body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>