<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_back"
        android:contentDescription="@string/des_iv"
        android:src="?attr/icon_Back"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.App.heading4.Bold"
        android:text="@string/titleSetting"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ui_mode"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title"
            style="@style/TextAppearance.App.body1.Bold"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/them_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:layout_toStartOf="@id/iv_change_theme"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.App.body2.Bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/des_iv"
            android:src="?attr/icon_Change_Setting"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="?attr/bg_View"
            android:layout_below="@id/iv_change_theme"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperature"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_unit_title"
            style="@style/TextAppearance.App.body1.Bold"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/temperature_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_celsius"
            android:layout_toStartOf="@id/iv_change_temperature"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.App.body2.Bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_change_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/des_iv"
            android:src="?attr/icon_Change_Setting"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="?attr/bg_View"
            android:layout_below="@id/iv_change_temperature"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title"
            style="@style/TextAppearance.App.body1.Bold"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/language_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_vi"
            android:layout_toStartOf="@id/iv_change_language"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.App.body2.Bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/des_iv"
            android:src="?attr/icon_Change_Setting"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="?attr/bg_View"
            android:layout_below="@id/iv_change_language"/>
    </RelativeLayout>



</LinearLayout>